binrw/tests/ui/try_calc_conflict.stderr
error: `try` is incompatible with `default` and `calc`
 --> $DIR/try_calc_conflict.rs:5:10
  |
5 |     #[br(try, calc(None))]
  |          ^^^
