binrw/tests/ui/try_calc_conflict.rs
use binrw::BinRead;

#[derive(BinRead)]
struct Foo {
    #[br(try, calc(None))]
    a: Option<u8>,
}

fn main() {}
